<resources>
    <string name="app_name">Mareu</string>
    <string name="by_date">Par date</string>
    <string name="by_place">Par lieu</string>
    <string name="save_button">Enregistrer</string>
    <string name="date">Date :</string>
    <string name="begin_hour">Heure de début</string>
    <string name="finish_hour">Heure de fin</string>
    <string name="meeting_date">Date de la réunion</string>
    <string name="meeting_name">Nom de la réunion</string>
    <string name="meeting_room">Salle de réunion :</string>
    <string name="participants">Participant</string>
    <string name="add_participant">Ajouter</string>
    <string name="begin_hour_2points">Heure de début :</string>
    <string name="finish_hour_2points">Heure de fin :</string>
    <string name="choose_meetingRoom">Veuillez choisir une salle</string>
    <string name="its_not_an_email_message">Veuillez entrer un e-mail valide</string>
    <string name="field_isEmpty">Veuillez renseigner tout les champs</string>
    <string name="error_message">Veuillez renseigner tout les champs</string>
    <string name="error_message_meeting_room">La salle de réunion est déjà réservée aux heures indiquées, veuillez faire les modifications nécessaires</string>
    <string name="error_message_time">L\'heure de fin de réunion est avant l\'heure de début</string>
    <string name="error_message_date_and_time">Veuillez remplir les champs date et heures</string>
    <string name="room01">Salle 1</string>
    <string name="room02">Salle 2</string>
    <string name="room03">Salle 3</string>
    <string name="room04">Salle 4</string>
    <string name="room05">Salle 5</string>
    <string name="room06">Salle 6</string>
    <string name="room07">Salle 7</string>
    <string name="room08">Salle 8</string>
    <string name="room09">Salle 9</string>
    <string name="room10">Salle 10</string>
</resources>
